k8s/name-main/name-main_service-base.yaml
apiVersion: v1
kind: Service
metadata:
  name: name-main-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: name-main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name-main-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: name-main
  template:
    metadata:
      labels:
        app: name-main
    spec:
      containers:
      - name: name-main
        image: {registryname}/name-main:latest
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
      imagePullSecrets:
        - name: regcred
